# arch-sparring-agent

./: .gitignore  README.md  cdk.json  package.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
arch_sparring_agent/: cli.py  config.py  context_condenser.py  orchestrator.py  state.py
arch_sparring_agent/agents/: architecture_agent.py  ci_agents.py  moderator_agent.py  question_agent.py  remediation_agent.py  requirements_agent.py  review_agent.py  sparring_agent.py
arch_sparring_agent/tools/: cfn_analyzer.py  diagram_analyzer.py  document_parser.py  source_analyzer.py
examples/ci/: gitlab-ci.yml
lib/: arch-sparring-agent-stack.ts
test/: arch-sparring-agent.test.ts
tests/: test_context_condenser.py  test_orchestrator.py  test_requirements_agent.py  test_state.py
