[project]
name = "arch-sparring-agent"
version = "0.1.0"
description = "A multi-agent system that conducts comprehensive architecture reviews"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "bedrock-agentcore>=1.1.1",
  "boto3>=1.42.2",
  "markdown>=3.10",
  "pillow>=12.0.0",
  "python-frontmatter>=1.1.0",
  "strands-agents>=1.19.0",
]

[project.optional-dependencies]
otel = ["strands-agents[otel]>=1.19.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["arch_sparring_agent"]

[dependency-groups]
dev = ["ruff>=0.14.8"]

[project.scripts]
arch-review = "arch_sparring_agent.cli:main"
